Sample implementation of getting configuration settings using IOptions in Asp.net Core

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Token": {
+    "Key": "sdff/9+KMS22h2k3442haaApm",
+    "ExpirePeriod": 60
+  },
   "AllowedHosts": "*"
 }
